--- a/apps/recipes/src/pages/login.astro
+++ b/apps/recipes/src/pages/login.astro
@@ -94,7 +94,7 @@ if (Astro.request.method === 'POST') {
 
         <button
           type="submit"
-          class="rounded-md-full bg-md-sys-color-primary p-4 text-xl font-bold uppercase text-md-sys-color-on-primary shadow-md-2 transition-all hover:shadow-md-3 active:shadow-none"
+          class="rounded-full bg-md-sys-color-primary p-4 text-xl font-bold uppercase text-md-sys-color-on-primary shadow-md-2 transition-all hover:shadow-md-3 active:shadow-none"
         >
           Enter Kitchen
         </button>
