--- a/apps/recipes/src/layouts/RecipeLayout.astro
+++ b/apps/recipes/src/layouts/RecipeLayout.astro
@@ -63,7 +63,7 @@ const user = Astro.cookies.get('site_user')?.value
     </script>
   </head>
   <body class="bg-paper text-ink min-h-full overflow-x-hidden font-sans antialiased">
-    <div class="flex min-h-full flex-col">
+    <div class="flex min-h-full flex-col pb-8">
       <slot />
     </div>
 
